Table usuarios {
  id_usuario int [pk, increment]
  nombre varchar(255)
  rol varchar(255)
  email varchar(255) [unique]
  telefono varchar(20)
  password varchar(255)
  direccion varchar(255)
  fecha_registro timestamp [default: `CURRENT_TIMESTAMP`]
}

Table hospedajes {
  id_hospedaje int [pk, increment]
  nombre varchar(255)
  descripcion text
  capacidad int
  precio decimal(10, 2)
  foto varchar(255)
  disponibilidad boolean [default: true]
  tipo varchar(50)
  fecha_creacion timestamp [default: `CURRENT_TIMESTAMP`]
}

Table reservas {
  id_reserva int [pk, increment]
  id_usuario int
  id_hospedaje int
  fecha_checkin date
  fecha_checkout date
  cant_personas int
  importe_total decimal(10, 2)
  estado varchar(50) [default: 'pendiente']
  fecha_creacion timestamp [default: `CURRENT_TIMESTAMP`]
}

Ref: reservas.id_usuario > usuarios.id_usuario
Ref: reservas.id_hospedaje > hospedajes.id_hospedaje
